syntax = "proto3";

package clutch.config.service.aws.v1;

option go_package = "github.com/lyft/clutch/backend/api/config/service/aws/v1;awsv1";

import "validate/validate.proto";

message Config {
  repeated string regions = 1 [ (validate.rules).repeated = {min_items : 1} ];
  ClientConfig client_config = 2;
  ClientSettings client_settings = 3;
}

message ClientConfig {
  // If not set explicity, retries default to 0
  int32 retries = 1 [ (validate.rules).int32.gte = 0 ];
}

message ClientSettings {
  DynamodbScalingLimits dynamodb_scaling_limits = 1;
}

message DynamodbScalingLimits {
  // defaults to AWS default quotas if not set
  // https://docs.aws.amazon.com/amazondynamodb/latest/developerguide/Limits.html#default-limits-throughput-capacity-modes
  int64 max_read_capacity_units = 1 [ (validate.rules).int64.gte = 1 ];
  int64 max_write_capacity_units = 2 [ (validate.rules).int64.gte = 1 ];
  // defaults to a scale factor of 2.0x 
  float max_scale_factor = 3;
  // enables whether the service can override safety limits. Defaults to false. 
  bool enable_override = 4;
}

